@@ -49,3 +49,11 @@ item_delivery_pod-debris_explosion_water=Debris explosion in water
 
 item_delivery_pod-debris_fire_flame=Wrecked delivery pod fire flame
 item_delivery_pod-debris_fire_flame_water=Wrecked delivery pod fire flame in water
+
+
+
+[mod-setting-name]
+item_delivery_pod-modular_ship_part_weight=Modular ship part weight
+
+[mod-setting-description]
+item_delivery_pod-modular_ship_part_weight=The "weight" of each ship part of the "modular-auto" crashType. See Readme for details on how this is used.
