@@ -1,0 +1,12 @@
+data:extend(
+    {
+        {
+            name = "item_delivery_pod-modular_ship_part_weight",
+            type = "int-setting",
+            default_value = 100,
+            minimum_value = 1,
+            setting_type = "runtime-global",
+            order = "5000"
+        }
+    }
+)
